	* Fixed percentage based potions.
	* Implemented Kerning City Party Quest NPCs.

2012-07-22  GoldenKevin  (revision 109)

	* Implemented or added stubs for remaining Kerning City area NPCs.
	* LoginServer loads for shutdown game servers are reset to 0.

2012-08-02  GoldenKevin  (revision 110)

	* Began a refactor of scripting APIs.
	* Fixed syntax error in Bell's script.

2012-08-02  GoldenKevin  (revision 111)

	* Started work on events.
	* Finished script refactor started last revision.
	* Fixed some more of improper usage of Rhino with regards to passing Java
	objects into a script's scope.

2012-08-09  GoldenKevin  (revision 112)

	* Fixed persistent events loading before Scheduler was enabled.
	* Added more features to script bindings and to EventManipulator. init()
	function in event scripts now accept an attachment.
	* Added EventManipulator field in GameCharacter.
	* One of Cloto's lines is more GMS-like now.

2012-08-09  GoldenKevin  (revision 113)

	* Updated supported Kvj format to r29.
	* Kerning City event script is fully implemented. Now I just have to
	implement blocked portals so players can't skip stages.
	* Fixed potential memory leak in ScriptPlayer.
	* EventManipulator methods relating to player and party are now used. Still
	have not added hooks for mobs.

2012-08-09  GoldenKevin  (revision 114)

	* Cleaned up Cloto's script. kpq.js renamed to party1.js.
	* Fixed NullPointerException when Kerning PQ times out, error when any party
	member but the leader leaves while in the PQ, and TypeError when a party
	tries entering when another party is still inside.
	* Temporary implementation for portal blocking in Kerning PQ.

2012-08-10  GoldenKevin  (revision 115)

	* Added NPCs for John's jump quests and Chrishrama in Sleepywood.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.